# Wa-Tor-Simulation

./: AllPracticesAndNotes.cpp  CMakeLists.txt  Coding Challenge Page.cpp  Homework #1 (Wa-Tor).cpp  Homework #1.cpp  README.md  main.cpp
