cmake_minimum_required(VERSION 4.1)
project(firstproject)

set(CMAKE_CXX_STANDARD 20)

add_executable(practicetest AllPracticesAndNotes.cpp)

add_executable(firstproject main.cpp)
add_executable(secondproject "Coding Challenge Page.cpp")
add_executable(Wa-Tor "Homework #1 (Wa-Tor).cpp"
)
add_executable(Wa-Tor2 "Homework #1.cpp")
